<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
      android:id="@+id/cardViewRegister"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="100dp"
      app:cardCornerRadius="8dp"
      app:cardElevation="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <EditText
          android:id="@+id/editTextEmail"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="20dp"
          android:hint="@string/email"
          android:textSize="18sp"
          android:inputType="textEmailAddress"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:autofillHints="email" />

      <EditText
          android:id="@+id/editTextPhone"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="16dp"
          android:hint="@string/phone"
          android:inputType="phone"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
          android:autofillHints="Phone" />

      <EditText
          android:id="@+id/editTextPassword"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="16dp"
          android:textSize="18sp"
          android:hint="@string/password"
          android:inputType="textPassword"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
          android:autofillHints="password" />

      <Button
          android:id="@+id/buttonRegister"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/register"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
